Fix Debug Build Error in Webcore module. https://bugs.webkit.org/show_bug.cgi?id=140383

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2015-01-13
Reviewed by Csaba Osztrogonác.

No new tests because there is no visible behavior change.

* platform/linux/MemoryPressureHandlerLinux.cpp:
(WebCore::MemoryPressureHandler::ReliefLogger::platformLog):

Canonical link: https://commits.webkit.org/158368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178349 268f45cc-cd09-0410-ab3c-d52691b4dbfc